--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^5.6.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
